# bubbaloo

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/bubaloo/: __init__.py  pipeline.py
src/bubaloo/base/: __init__.py  extract.py  load.py  transform.py
src/bubaloo/config/: config.toml
src/bubaloo/pipeline/: __init__.py  pipeline.py
src/bubaloo/pipeline/stages/: extract.py  load.py  transform.py
src/bubaloo/services/pipeline/: __init__.py  args.py  errors.py  logger.py  measure.py  session.py
src/bubaloo/services/validation/: parquet.py
src/bubaloo/shared/interfaces/: stage.py
src/bubaloo/tools/pipeline/: __init__.py  config.py  logger.py  measure.py  state.py
src/bubaloo/utils/functions/: validation_parquet_helper.py
src/bubaloo/utils/interfaces/: pipeline_stages_stage.py
src/bubaloo/validation/: parquet.py
src/bubbaloo/config/: default_settings.py
src/bubbaloo/orchestration/: __init__.py  orchestration.py
src/bubbaloo/pipeline/: __init__.py  pipeline.py
src/bubbaloo/pipeline/stages/: __init__.py  extract.py  load.py  transform.py
src/bubbaloo/services/local/: __init__.py  logger.py  storage.py
src/bubbaloo/services/pipeline/: __init__.py  args.py  config.py  get_spark.py  measure.py  orchestration.py  state.py  strategies.py
src/bubbaloo/services/validation/: __init__.py  csv.py  parquet.py
src/bubbaloo/utils/functions/: __init__.py  pipeline_orchestration_helper.py  pipeline_stage_helper.py  pipeline_stages_helper.py  pipeline_state_helper.py  validation_csv_helper.py  validation_helper.py  validation_parquet_helper.py
src/bubbaloo/utils/interfaces/: pipeline_logger.py  pipeline_stage.py  (+2 more)
tests/bubbaloo/: conftest.py
tests/bubbaloo/orchrestration/: conftest.py  test_orchestration.py
tests/bubbaloo/pipeline/: conftest.py  test_pipeline.py
tests/bubbaloo/utils/: test_functions.py
(+8 files in other folders)
