[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bubaloo"
version = "0.0.7"
authors = [
  { name="Ronald Restrepo", email="rarestrepoc@gmail.com" },
]
description = "This package is designed to make it easy to build data pipelines using pyspark"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "google-cloud-storage~=2.12.0",
    "dynaconf~=3.2.2",
    "pyarrow~=13.0.0",
    "gcsfs~=2023.9.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning"
]
[project.urls]
"Homepage" = "https://github.com/4512ronald/bubaloo"
"Bug Tracker" = "https://github.com/4512ronald/bubaloo/issues"
